<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:background="@color/white"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.vishesh.oldschool.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <TextView
        android:gravity="center"
        android:drawablePadding="@dimen/dp_10"
        android:textSize="24sp"
        android:text="@string/app_name"
        android:drawableTop="@drawable/login_page_03"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:drawableLeft="@drawable/user"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="5dp"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    android:background="@drawable/editlogin"
                    android:elevation="@dimen/dp_10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                >

                <EditText
                    android:drawableLeft="@drawable/lock"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="5dp"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    android:background="@drawable/editlogin"
                    android:elevation="@dimen/dp_10"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:textColor="@color/white"
                android:background="@drawable/loginbutton"
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_margin="@dimen/dp_10"
                android:weightSum="9"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="4"
                    android:background="@color/grey"/>
                <TextView
                    android:gravity="center"
                    android:text="OR"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="4"
                    android:background="@color/grey"/>


            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_facebook"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>





        </LinearLayout>
    </ScrollView>
</LinearLayout>
